--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,7 @@
 PORT = 7000
+
 DB_URI = "mongodb://localhost:27017/Amazon"
+
+JWT_SECRET = wfrjekhd84598456598456BJNKIFHUJKDWJ91C6GRVGUhdgu
+
+JWT_EXPIRY = 5d
