--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -5,3 +5,5 @@ DB_URI = "mongodb://localhost:27017/Amazon"
 JWT_SECRET = wfrjekhd84598456598456BJNKIFHUJKDWJ91C6GRVGUhdgu
 
 JWT_EXPIRY = 5d
+
+COOKIE_EXPIRY = 5
