--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -7,3 +7,13 @@ JWT_SECRET = wfrjekhd84598456598456BJNKIFHUJKDWJ91C6GRVGUhdgu
 JWT_EXPIRY = 5d
 
 COOKIE_EXPIRY = 5
+
+SMPT_HOST = stmp.gmail.com
+
+SMPT_PORT = 465
+
+SMPT_SERVICE = gmail
+
+SMPT_EMAIL = amazon.clone2001@gmail.com
+
+SMPT_PASSWORD = ymmbhaylazikthpb
