cloudinary in signup handle

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -17,3 +17,9 @@ SMPT_SERVICE = gmail
 SMPT_EMAIL = amazon.clone2001@gmail.com
 
 SMPT_PASSWORD = ymmbhaylazikthpb
+
+CLOUDINARY_NAME = amazon-clone-2001
+
+CLOUDINARY_API_KEY = 988526852442735
+
+CLOUDINARY_API_SECRET = qL725CEcGTkhVevMCaAL08k0LZU
