forgot password resetPasswordUrl

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -23,3 +23,5 @@ CLOUDINARY_NAME = amazon-clone-2001
 CLOUDINARY_API_KEY = 988526852442735
 
 CLOUDINARY_API_SECRET = qL725CEcGTkhVevMCaAL08k0LZU
+
+FRONTEND_URL = "http://localhost:3000"
