--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
 PORT = 7000
 
-DB_URI = "mongodb://localhost:27017/Amazon"
+DB_URI = mongodb+srv://Aman9798:Aman9798@amazon.yzaptit.mongodb.net/Amazon?retryWrites=true&w=majority
 
 JWT_SECRET = wfrjekhd84598456598456BJNKIFHUJKDWJ91C6GRVGUhdgu
 
